# PP-FinalProject

./: CMakeLists.txt  README.md  image.cu  image.cuh  main.cu  parallel_solution_baseline.cu  parallel_solution_baseline.cuh  parallel_solution_v2.cu  parallel_solution_v2.cuh  parallel_solution_v23.cu  parallel_solution_v23.cuh  parallel_solution_v234.cu  parallel_solution_v234.cuh  parallel_solution_v24.cu  parallel_solution_v24.cuh  parallel_solution_v3.cu  parallel_solution_v3.cuh  parallel_solution_v34.cu  parallel_solution_v34.cuh  parallel_solution_v4.cu  parallel_solution_v4.cuh  sequential_solution.cu  sequential_solution.cuh  solution.cu  solution.cuh  timer.cu  timer.cuh  utils.cu  utils.cuh
images/: input_2.pnm  input_3.pnm  input_4.pnm
